--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,3 @@
-[package]
-name = "serun"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-phf = { version = "0.12", features = ["macros"] }
+[workspace]
+resolver = "3"
+members = ["serun", "tauri/src-tauri"]
