--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,5 +60,6 @@
             "args": [],
             "cwd": "${workspaceFolder}"
         }
-    ]
+    ],
+    "recommendations": ["tauri-apps.tauri-vscode", "rust-lang.rust-analyzer"]
 }
