--- a/serun/Cargo.toml
+++ b/serun/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2024"
 
 [dependencies]
 phf = { version = "0.12", features = ["macros"] }
+serde = { version = "1", features = ["derive"] }
